[package]
name = "egui-miniquad"
version = "0.15.0"
authors = [
  "Logachev Fedor <not.fl3@gmail.com>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = "1.9"
egui = { version = "0.30.0", features = ["bytemuck"] }
miniquad = { version = "0.4.6" }
quad-url = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["custom"] }
quad-rand = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10.0"
